--- a/project-webdesign/webdesign.html
+++ b/project-webdesign/webdesign.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Big Picture by HTML5 UP</title>
+		<title>Shirley Lee | Professional Websites for Your Personal Brand</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,13 +16,13 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Big Picture</h1>
+				<h1>Modern Websites and Large-Scale Business Applications</h1>
 				<nav>
 					<ul>
 						<li><a href="../index.html">Home</a></li>
 						<li><a href="#intro">Intro</a></li>
-						<li><a href="#one">What I Do</a></li>
-						<li><a href="#two">Who I Am</a></li>
+						<!-- <li><a href="#one">What I Do</a></li>
+						<li><a href="#two">Who I Am</a></li> -->
 						<li><a href="#work">My Work</a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
@@ -33,10 +33,9 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2>Hey.</h2>
+						<h2>Building customer relationships, expanding your marketing efforts, and implementing web services</h2>
 					</header>
-					<p>Welcome to <strong>Big Picture</strong> a responsive site template designed by <a href="https://html5up.net">HTML5 UP</a><br />
-					and released for free under the <a href="https://html5up.net/license">Creative Commons Attribution license</a>.</p>
+					<p>Let us help you build your personal brand. Schedule an a <a href="https://calendly.com/shirley-lee10100/30min">appointment</a> today.</p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
@@ -44,7 +43,7 @@
 			</section>
 
 		<!-- One -->
-			<section id="one" class="main style2 right dark fullscreen">
+			<!-- <section id="one" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
 						<h2>What I Do</h2>
@@ -54,10 +53,10 @@
 					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
-			</section>
+			</section> -->
 
 		<!-- Two -->
-			<section id="two" class="main style2 left dark fullscreen">
+			<!-- <section id="two" class="main style2 left dark fullscreen">
 				<div class="content box style2">
 					<header>
 						<h2>Who I Am</h2>
@@ -67,37 +66,35 @@
 					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
-			</section>
+			</section> -->
 
 		<!-- Work -->
 			<section id="work" class="main style3 primary">
 				<div class="content">
 					<header>
 						<h2>My Work</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						<p>An experienced web developer with a proven track record of designing and building user-friendly applications. Creating responsive, full-stack applications using modern frameworks enabling us to craft robust, scalable applications. We are driven by a mission to create transformative solutions that blend technology and usability.	</p>
 					</header>
 
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt="" /></a>
+								<a href="images/Professional_Regulatory-Economist.png" class="image fit"><img src="images/Professional_Regulatory-Economist.png" title="Professional Sites" alt="" />Professional Sites</a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
+								<a href="images/Professional_Entrepreneur.png" class="image fit"><img src="images/Professional_Entrepreneur.png" title="Sites for Entrepreneurs" alt="" />Sites for Entrepreneurs</a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a>
+								<a href="images/NonProfit_District-Angels.png" class="image fit"><img src="images/NonProfit_District-Angels.png" title="DC Tech Venture Investor Syndicate" alt="" />DCTAV Investor Syndicate</a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Carry on" alt="" /></a>
+								<a href="images/NonProfit_District-Angels1.png" class="image fit"><img src="images/NonProfit_District-Angels1.png" title="DC Tech Venture Investor Syndicate" alt="" />Angel Investor Syndicate</a>
 							</article>
 							<article class="from-left">
-								<a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="The sparkling shell" alt="" /></a>
+								<a href="images/SmallBusiness_Contrstruction.png" class="image fit"><img src="images/SmallBusiness_Contrstruction.png" title="Small Businesses" alt="" />Small Businesses</a>
 							</article>
 							<article class="from-right">
-								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="Bent IX" alt="" /></a>
+								<a href="images/NonProfit_TOOOL.png" class="image fit"><img src="images/NonProfit_TOOOL.png" title="Non-Profits" alt="" />Non-Profits</a>
 							</article>
 						</div>
 
@@ -109,9 +106,11 @@
 				<div class="content">
 					<header>
 						<h2>Say Hello.</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
+						<p>Email : <a href="mailto:shirley.lee10100@gmail.com">Shirley.Lee10100@gmail.com</a></p>
+						<p>Schedule a <a href="https://calendly.com/shirley-lee10100/30min">meeting</a>with us today!</p>
+
 					</header>
-					<div class="box">
+					<!-- <div class="box">
 						<form method="post" action="#">
 							<div class="fields">
 								<div class="field half"><input type="text" name="name" placeholder="Name" /></div>
@@ -122,7 +121,7 @@
 								<li><input type="submit" value="Send Message" /></li>
 							</ul>
 						</form>
-					</div>
+					</div> -->
 				</div>
 			</section>
 
@@ -131,17 +130,15 @@
 
 				<!-- Icons -->
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
+						<li><a href="https://www.linkedin.com/in/shirley--lee" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://calendly.com/shirley-lee10100/30min" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://github.com/ShirleyLe3/About-Me" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="mailto:shirley.lee10100@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 
 				<!-- Menu -->
 					<ul class="menu">
-						<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Software Solutions, LLC.</li><li>Design: <a href="http://html5up.net">html5up</a></li>
 					</ul>
 
 			</footer>
