--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
 							<li>
 								<a href="#">Portfolio</a>
 								<ul>
-									<li><a href="/project-webdesign/webdesign.html">Web Sites</a></li>
+									<li><a href="/project-webdesign/webdesign.html">Websites Portfolio</a></li>
 									<!-- <li><a href="/project-embedded/embedded.html">Applications</a></li> -->
-									<li><a href="/project-embedded/embedded.html">Connected Devices</a></li>
-									<li><a href="/project-robotics/robotics.html">Robotics</a></li>
+									<li><a href="/project-embedded/embedded.html">Smart Applications</a></li>
+									<li><a href="/project-robotics/robotics.html">Robotics Software</a></li>
 								</ul>
 							</li> 
+							<li><a href="https://www.linkedin.com/in/shirley--lee">LinkedIn</a></li>
+
 							<!-- <li>
 								<a href="#">Layouts</a>
 								<ul>
