--- a/project-embedded/embedded.html
+++ b/project-embedded/embedded.html
@@ -1,16 +1,14 @@
 <!DOCTYPE HTML>
-<!--
-	Dimension by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Dimension by HTML5 UP</title>
+		<title>Shirley Lee | Embedded Software Developer Smart Applications</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="icon" type="icon" href="images/favicon-line.ico"/>
+
 	</head>
 	<body class="is-preload">
 
@@ -19,22 +17,22 @@
 
 				<!-- Header -->
 					<header id="header">
-						<div class="logo">
-							<span class="icon fa-gem"></span>
+						<div><a href="../index.html" class="logo">
+							<span class="icon fa-gem"></span></a>
+
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Dimension</h1>
-								<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<h1>Smart Applications</h1>
+								<p>A Smart Lock model used for sound activation of home devices.</p>
 							</div>
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#intro">Project</a></li>
+								<li><a href="#work">Hardware</a></li>
+								<li><a href="#about">Software</a></li>
+								<li><a href="#contact">Use-Cases</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -43,31 +41,38 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Intro -->
+						<!-- One -->
 							<article id="intro">
-								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<h2 class="major">Project</h2>
+								<span class="image main"><img src="images/audiolock-tensorflowmodel.png" alt="" /></span>
+								<p>This project involves building a Smart Lock model that can be executed on a cortex-M4 microcontroller. The SensiML Analytics Toolkit is used to capture and annotate the audio data and build a model using the TensorFlow package that is deployed and tested on the edge device. </p>
+								<p>Check out my <a href="https://github.com/ShirleyLe3/About-Me">awesome work</a>.</p>
 							</article>
 
-						<!-- Work -->
+						<!-- Two -->
 							<article id="work">
-								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<h2 class="major">Hardware</h2>
+								<span class="image main"><img src="images/siliconlabs-board-G24.png" alt="" /></span>
+								<p>This project uses the <a href="https://sensiml.com/documentation/firmware/silicon-labs-xg24/silicon-labs-xg24.html">EFR32xG24 Dev Kit Board</a> with the onboard IMU and I2S microphone sensosr to take audio and motion measurements and send data via serial UART. .</p>
 							</article>
 
-						<!-- About -->
+						<!-- Three -->
 							<article id="about">
-								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<h2 class="major">Software</h2>
+								<span class="image main"><img src="images/audiolock-unknown.png" alt="" /></span>
+								<p>A basic python script is also provided to capture the data and store as a wav file for the audio and a CSV file for the IMU data. The example project uses the I/O Stream service along with Microphone and IMU component drivers running in a bare-metal configuration. Sensor data from the I2S Microphone and the SPI IMU is transferred over virtual COM port (VCOM) at 921600 baud.</p>
 							</article>
 
-						<!-- Contact -->
+						<!-- Four -->
 							<article id="contact">
+								<h2 class="major">Use-Cases</h2>
+								<span class="image main"><img src="images/audiolock-smartlock.jpg" alt="" /></span>
+								<p>This sensor device can be placed next to a deadbolt mounted on a door to detect unusual activity or tampering of locks. The board can be used to develop similar audio classification algorithms, such as keyword spotting, industrial sound recognition, and smart home devices that are sound activated.</p>
+							</article>
+
+
+
+							<!-- <article id="contact">
 								<h2 class="major">Contact</h2>
 								<form method="post" action="#">
 									<div class="fields">
@@ -95,7 +100,7 @@
 									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
-							</article>
+							</article> -->
 
 						<!-- Elements -->
 							<article id="elements">
@@ -343,7 +348,12 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						&copy; Shirley Software Solutions. 
+						<a href="https://calendly.com/shirley-lee10100/30min" class="icon brands fa-instagram"><span class="label">Schedule</span></a>
+						<a href="https://www.linkedin.com/in/shirley--lee" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a>
+						<a href="https://github.com/ShirleyLe3/About-Me" class="icon brands fa-github"><span class="label">GitHub</span></a>
+						<a href="mailto:shirley.lee10100@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a>
+						<a href="http://html5up.net">design</a>
 					</footer>
 
 			</div>
