--- a/project-webdesign/webdesign.html
+++ b/project-webdesign/webdesign.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Big Picture by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Shirley Lee | Professional Websites for Your Personal Brand</title>
@@ -11,6 +7,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="icon" type="icon" href="images/favicon-line.ico"/>
+
 	</head>
 	<body class="is-preload">
 
@@ -105,11 +103,40 @@
 			<section id="contact" class="main style3 secondary">
 				<div class="content">
 					<header>
-						<h2>Say Hello.</h2>
+						<h2>Contact us</h2>
 						<p>Email : <a href="mailto:shirley.lee10100@gmail.com">Shirley.Lee10100@gmail.com</a></p>
 						<p>Schedule a <a href="https://calendly.com/shirley-lee10100/30min">meeting</a>with us today!</p>
 
 					</header>
+					<!-- Contact -->
+											<article id="contact">
+												<!-- <h2 class="major">Contact</h2> -->
+												<form method="post" action="#">
+													<div class="fields">
+														<div class="field half">
+															<label for="name">Name</label>
+															<input type="text" name="name" id="name" />
+														</div>
+														<div class="field half">
+															<label for="email">Email</label>
+															<input type="text" name="email" id="email" />
+														</div>
+														<div class="field">
+															<label for="message">Message</label>
+															<textarea name="message" id="message" rows="4"></textarea>
+														</div>
+													</div>
+													<ul class="actions">
+														<li><input type="submit" value="Send Message" class="primary" /></li>
+														<li><input type="reset" value="Reset" /></li>
+													</ul>
+												</form>
+												<!-- <ul class="icons">
+													<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+													<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+												</ul> -->
+											</article>
+					<!-- Original Contactform -- Delete after refactoring -->						
 					<!-- <div class="box">
 						<form method="post" action="#">
 							<div class="fields">
@@ -138,7 +165,7 @@
 
 				<!-- Menu -->
 					<ul class="menu">
-						<li>&copy; Software Solutions, LLC.</li><li>Design: <a href="http://html5up.net">html5up</a></li>
+						<li>&copy; Software Solutions, LLC.</li><li><a href="http://html5up.net">design</a></li>
 					</ul>
 
 			</footer>
