update/include-webapplications-addedpersonalsite

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1 id="logo"><a href="index.html">Interface and Application Developement</a></h1>
+					<h1 id="logo"><a href="index.html">Web Application Developement</a></h1>
 					<nav id="nav">
 						<ul>
 							<li><a href="index.html">Home</a></li>
@@ -23,6 +23,7 @@
 							<li>
 								<a href="#">Portfolio</a>
 								<ul>
+									<li><a href="https://www.shirleylee.org/">Web Applications</a></li>
 									<li><a href="/project-webdesign/webdesign.html">Websites Portfolio</a></li>
 									<!-- <li><a href="/project-embedded/embedded.html">Applications</a></li> -->
 									<li><a href="/project-embedded/embedded.html">Smart Applications</a></li>
@@ -102,7 +103,7 @@
 						<p>Mobile Apps: Designing seamless and scalable applications for diverse platforms.</p>
 						<p>Data Visualization & Analytics: Empowering businesses with actionable insights through dynamic dashboards and AR experiences.</p>
 						<ul class="actions">
-							<li><a href="mailto:shirley.lee10100@gmail.com" class="button">Learn More</a></li>
+							<li><a href="https://www.shirleylee.org/" class="button">Learn More</a></li>
 
 						</ul>
 					</div>
@@ -123,7 +124,7 @@
 						<p>Hardware: Soldering, Plasma Cutting, Laser Cutting, AutoCAD, Precision measuring, TIG/MIG Welding .</p>
 
 						<ul class="actions">
-							<li><a href="portfolio.html" class="button">Learn More</a></li>
+							<li><a href="/project-embedded/embedded.html" class="button">Learn More</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
