--- a/project-webdesign/webdesign.html
+++ b/project-webdesign/webdesign.html
@@ -31,7 +31,7 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2>Building customer relationships, expanding your marketing efforts, and implementing web services</h2>
+						<h2>Building customer relationships, expanding your marketing efforts, elevating your digital presence</h2>
 					</header>
 					<p>Let us help you build your personal brand. Schedule an a <a href="https://calendly.com/shirley-lee10100/30min">appointment</a> today.</p>
 					<footer>
@@ -41,37 +41,24 @@
 			</section>
 
 		<!-- One -->
-			<!-- <section id="one" class="main style2 right dark fullscreen">
-				<div class="content box style2">
-					<header>
-						<h2>What I Do</h2>
-					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
-				</div>
-				<a href="#two" class="button style2 down anchored">Next</a>
-			</section> -->
-
-		<!-- Two -->
-			<!-- <section id="two" class="main style2 left dark fullscreen">
-				<div class="content box style2">
-					<header>
-						<h2>Who I Am</h2>
-					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
-				</div>
-				<a href="#work" class="button style2 down anchored">Next</a>
-			</section> -->
+		<!-- <section id="one" class="main style2 right dark fullscreen">
+			<div class="content box style2">
+				<header>
+					<h2>What I Do</h2>
+				</header>
+				<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
+				Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
+				id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+			</div>
+			<a href="#two" class="button style2 down anchored">Next</a>
+		</section> -->
 
 		<!-- Work -->
 			<section id="work" class="main style3 primary">
 				<div class="content">
 					<header>
 						<h2>My Work</h2>
-						<p>An experienced web developer with a proven track record of designing and building user-friendly applications. Creating responsive, full-stack applications using modern frameworks enabling us to craft robust, scalable applications. We are driven by a mission to create transformative solutions that blend technology and usability.	</p>
+						<p>Specializing in crafting highly functional and visually captivating user interfaces. Our team of experts leverages their deep knowledge of HTML, CSS, and JavaScript to build high-quality, custom web applications tailored to meet our clients' unique needs. Our commitment to excellence is reflected in the high-quality solutions we provide, empowering businesses to thrive in the digital landscape.</p>
 					</header>
 
 					<!-- Gallery  -->
@@ -96,6 +83,20 @@
 							</article>
 						</div>
 
+				</div>
+			</section>
+
+			<!-- Services -->
+			<section id="two" class="main style2 left dark fullscreen">
+				<div class="content box style2">
+					<header>
+						<h2>Professional Services</h2>
+					</header>
+					<p>As a client-focused web development agency, we prioritize collaboration, innovation, and exceptional service delivery. </p>
+					<p>UI Design & Implementation: Play a crucial role in designing and implementing user interfaces that are both visually appealing and highly functional.</p>
+					<p>Landing Page Creation: We work closely with our business partners to design, implement, and optimize landing pages for maximum engagement and conversion rates.</p>
+					<p>Frontend Optimization: Our team focuses on maximizing application speed, scalability, and responsiveness, delivering web solutions that consistently meet and exceed user expectations.</p>
+					<p>Full-Stack Application Development: By utilizing modern frameworks, we create robust, scalable, and responsive full-stack applications that address our clients' diverse business needs.</p>
 				</div>
 			</section>
 
