--- a/project-embedded/embedded.html
+++ b/project-embedded/embedded.html
@@ -348,7 +348,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						&copy; Shirley Software Solutions. 
+						&copy; <a href="../index.html">Shirley Software Solutions. </a>
 						<a href="https://calendly.com/shirley-lee10100/30min" class="icon brands fa-instagram"><span class="label">Schedule</span></a>
 						<a href="https://www.linkedin.com/in/shirley--lee" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a>
 						<a href="https://github.com/ShirleyLe3/About-Me" class="icon brands fa-github"><span class="label">GitHub</span></a>
