add/portfoliopage--update/url-routing-home

--- a/project-embedded/embedded.html
+++ b/project-embedded/embedded.html
@@ -17,7 +17,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<div><a href="../index.html" class="logo">
+						<div><a href="../" class="logo">
 							<span class="icon fa-gem"></span></a>
 
 						</div>
@@ -444,7 +444,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						&copy; <a href="../index.html">Shirley Software Solutions. </a>
+						&copy; <a href="../">Shirley Software Solutions. </a>
 						<a href="https://calendly.com/shirley-lee10100/30min" class="icon brands fa-instagram"><span class="label">Schedule</span></a>
 						<a href="https://www.linkedin.com/in/shirley--lee" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a>
 						<a href="https://github.com/ShirleyLe3/About-Me" class="icon brands fa-github"><span class="label">GitHub</span></a>
