--- a/project-webdesign/webdesign.html
+++ b/project-webdesign/webdesign.html
@@ -17,7 +17,7 @@
 				<h1>Modern Websites and Large-Scale Business Applications</h1>
 				<nav>
 					<ul>
-						<li><a href="../index.html">Home</a></li>
+						<li><a href="../">Home</a></li>
 						<li><a href="#intro">Intro</a></li>
 						<!-- <li><a href="#one">What I Do</a></li>
 						<li><a href="#two">Who I Am</a></li> -->
