--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 					<h1 id="logo"><a href="index.html">Web Application Developement</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="/">Home</a></li>
 							<!-- <li><a href="/project-embedded/embedded.html">Embedded</a></li> -->
 							<li>
 								<a href="#">Portfolio</a>
@@ -26,8 +26,8 @@
 									<li><a href="https://www.shirleylee.org/">Web Applications</a></li>
 									<li><a href="/project-webdesign/webdesign.html">Websites Portfolio</a></li>
 									<!-- <li><a href="/project-embedded/embedded.html">Applications</a></li> -->
-									<li><a href="/project-embedded/embedded.html">Smart Applications</a></li>
-									<li><a href="/project-robotics/robotics.html">Robotics Software</a></li>
+									<li><a href="/project-embedded/embedded.html">Smart Devices</a></li>
+									<li><a href="/project-robotics/robotics.html">Robotics Project</a></li>
 								</ul>
 							</li> 
 							<li><a href="https://www.linkedin.com/in/shirley--lee">LinkedIn</a></li>
