--- a/project-robotics/robotics.html
+++ b/project-robotics/robotics.html
@@ -27,7 +27,7 @@
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 							<li><a href="https://github.com/ShirleyLe3/About-Me" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							<li><a href="mailto:shirley.lee10100@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
-							<li><a href="../index.html">Home</a></li>
+							<li><a href="../">Home</a></li>
 						
 						</ul>
 					</header>
