update/webdesign-add-pricing-sections

--- a/project-webdesign/webdesign.html
+++ b/project-webdesign/webdesign.html
@@ -13,25 +13,27 @@
 	<body class="is-preload">
 
 		<!-- Header -->
-			<header id="header">
-				<h1>Modern Websites and Large-Scale Business Applications</h1>
-				<nav>
-					<ul>
-						<li><a href="../">Home</a></li>
-						<li><a href="#intro">Intro</a></li>
-						<!-- <li><a href="#one">What I Do</a></li>
-						<li><a href="#two">Who I Am</a></li> -->
-						<li><a href="#work">My Work</a></li>
-						<li><a href="#contact">Contact</a></li>
-					</ul>
-				</nav>
-			</header>
+		<header id="header">
+			<h1>Modern Websites and Large-Scale Business Applications</h1>
+			<nav>
+				<ul>
+
+					<li><a href="#intro">Home</a></li>
+					<!-- <li><a href="#one">What I Do</a></li> -->
+					<li><a href="#two">Our Services</a></li> 
+					<li><a href="#work">Featured Sites</a></li>
+					<li><a href="#contact">Contact</a></li>
+					<li><a href="../">About Us</a></li>
+				</ul>
+			</nav>
+		</header>
 
 		<!-- Intro -->
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2>Building customer relationships, expanding your marketing efforts, elevating your digital presence</h2>
+						<h2>Create your digital Presence.</h2>
+						<h2>Expanding your marketing efforts. Elevating your brand. Building success. </h2>
 					</header>
 					<p>Let us help you build your personal brand. Schedule an a <a href="https://calendly.com/shirley-lee10100/30min">appointment</a> today.</p>
 					<footer>
@@ -57,8 +59,8 @@
 			<section id="work" class="main style3 primary">
 				<div class="content">
 					<header>
-						<h2>My Work</h2>
-						<p>Specializing in crafting highly functional and visually captivating user interfaces. Our team of experts leverages their deep knowledge of HTML, CSS, and JavaScript to build high-quality, custom web applications tailored to meet our clients' unique needs. Our commitment to excellence is reflected in the high-quality solutions we provide, empowering businesses to thrive in the digital landscape.</p>
+						<h2>Featured Sites</h2>
+						<p>Specializing in crafting highly functional and visually captivating user interfaces. Experts leveraging deep knowledge of HTML, CSS, JavaScript, and expertise using Webflow and Wix to build high-quality, custom web applications tailored to meet our clients' unique needs. Our commitment to excellence is reflected in the high-quality solutions we provide, empowering businesses to thrive in the digital landscape.</p>
 					</header>
 
 					<!-- Gallery  -->
@@ -87,16 +89,98 @@
 			</section>
 
 			<!-- Services -->
-			<section id="two" class="main style2 left dark fullscreen">
+			<section id="two" class="main style2 right dark fullscreen">
 				<div class="content box style2">
 					<header>
 						<h2>Professional Services</h2>
 					</header>
 					<p>As a client-focused web development agency, we prioritize collaboration, innovation, and exceptional service delivery. </p>
-					<p>UI Design & Implementation: Play a crucial role in designing and implementing user interfaces that are both visually appealing and highly functional.</p>
-					<p>Landing Page Creation: We work closely with our business partners to design, implement, and optimize landing pages for maximum engagement and conversion rates.</p>
-					<p>Frontend Optimization: Our team focuses on maximizing application speed, scalability, and responsiveness, delivering web solutions that consistently meet and exceed user expectations.</p>
-					<p>Full-Stack Application Development: By utilizing modern frameworks, we create robust, scalable, and responsive full-stack applications that address our clients' diverse business needs.</p>
+					<p>Design Discussions: Play a crucial role in designing and implementing user interfaces that are both visually appealing and highly functional.</p>
+					<p>Brand Development: We work closely with our business partners to design, implement, and optimize landing pages for maximum engagement and conversion rates.</p>
+					<p>Site Optimization: Our team focuses on maximizing application speed, scalability, and responsiveness, delivering web solutions that consistently meet and exceed user expectations.</p>
+					<p>Dynamic Websites: By utilizing modern frameworks, we create robust, scalable, and responsive full-stack applications that address our clients' diverse business needs.</p>
+				</div>
+			</section>
+
+			<!-- Process -->
+			<section id="two" class="main style4 left dark fullscreen">
+				<div class="content box style4">
+					<header>
+						<h2>Design & Development</h2>
+					</header>
+					<p>Workflow with clients is essential for smooth collaboration and project success. Whether you’re starting fresh or improving an existing site, I’m here to make the journey seamless and enjoyable.</p>
+					<p><strong>Initial Consultation:</strong>  </p>
+					<p><li>Discuss the client's needs, goals, and vision for their website.</li>
+					<li>Provide an overview of your services and process.</li></p>
+					<p><strong>Proposal and Planning:  </strong>  </p>
+					<p><li>Create a detailed proposal outlining the project scope, timeline, and cost. </li>
+					<li>Understand their target audience and any specific features they require. Include revision policies.</li>
+					<li>Share design concepts with the client to gain insight into brand and user experience.</li></p>
+					<p><strong>Prototype and Design:  </strong>  </p>
+					<p><li>Develop a sitemap and wireframes to outline the website's structure and layout.</li>
+					<li>Collect images and other media for website.</li>
+					<li>Present a preview of design prototype for feedback and approval.</li></p>
+					<p><strong>Development:  </strong>  </p>
+					<p><li>Implement design using CMS platform of choice or preferred tech stack.</li>
+					<li>Integrate necessary functionalities, such as e-commerce, booking systems, or contact forms.</li>
+					<li>Ensure the site is responsive and optimized for different devices.</li></p>
+					<p><strong>Client Review:  </strong>  </p>
+					<p><li>Share the completed website with the client for review.</li>
+					<li>Address any feedback and make necessary revisions.</li>
+					<li>Keep the client informed throughout the process.</li></p>
+					<p><strong>Testing and Launch:  </strong>  </p>
+					<p><li>Test the website for functionality, performance, and compatibility.</li>
+					<li>Ensure all links, forms, and features work as intended.</li>
+					<li>Once approved, publish the website and provide the client with access.</li></p>
+					<p><strong>Handover and Training:  </strong>  </p>
+					<p><li>Transfer ownership of the website to the client or add them as a collaborator with specific permissions.</li>
+					<li>Provide training on how to manage and update the site using Wix's dashboard.</li>
+					<li>Offer ongoing support or maintenance services if needed.</li></p>
+					<p><strong>Follow-Up:  </strong>  </p>
+					<p><li>Check in with the client after the launch to ensure everything is running smoothly. </li>
+					<li>Gather feedback and ask for testimonials or referrals.</li></p>
+
+					<p><strong>Let’s Bring Your Vision to Life</strong>  With experience crafting websites tailored to unique needs and goals, I’ll guide you through every step of the process—from concept to launch. </p>
+					<input type="submit" value="Start Designing" class="primary" />
+				</div>
+			</section>
+
+			<!-- Pricing -->
+			<section id="three" class="main style2 right dark fullscreen">
+				<div class="content box style2">
+					<header>
+						<h2>Plans & Services</h2>
+					</header>
+					<h3>Hourly </h3>
+					<p>The total hours spent on a project can vary depending on factors. A static website with a few additional pages and domain registration will range from <strong>$30 to $75</strong> per hour. </p>
+					<p>Design and development: 10-20 hours (a crucial part of the process to ensure user interfaces that are both visually appealing and highly functional. Duration depends on the complexity of the pages and the required features)</p>
+					<p>Testing and debugging: 5-10 hours (to ensure everything works as expected on different devices and browsers)</p>
+					<p>Domain registration and setup: 1-2 hours (to connect to domain registrar)</p>
+					<p>For basic sites you might expect to spend around 16-32 hours, which would translate to a cost $240 to $960. </p>
+
+					<h3>Project-Based</h3>
+					<p>Low-end: <strong>$200–$500</strong> for basic design and functionality. Domain registration and setup. </p>
+					<p>Mid-range: <strong>$500–$900</strong> for more polished work, professional branding, minor customizations, fully responsive design, and interactive elements. </p>					
+					<p>High-end: $900–$1,500 for advanced features, CMS collections, SEO optimization, eCommerce websites, or anything more than 5 pages. </p>
+					<p>Dynamic Web Apps: $1,000–$2,000 for dynamic and scalable web applications, API integration, and and additional services that address our clients' diverse business needs. </p>
+					<p>Let’s make your online presence unforgettable. Click below to get in touch—I'll be with you every step of the way. </p>
+					<input type="submit" value="Get Started" class="primary" />
+				</div>
+			</section>
+
+
+			<!-- Portfolio -->
+			<section id="two" class="main style2 left dark fullscreen">
+				<div class="content box style2">
+					<header>
+						<h2>Partnering with Pioneers</h2>
+					</header>
+					<p>Ready to Get Started? Whether you're looking to launch a brand-new website or give your existing site a fresh, professional touch, I'm here to help bring your vision to life. With a focus on clean design, seamless functionality, and your unique goals, my aim is to create a site that truly represents you or your business.</p>
+					<p>Feel free to <a href="https://calendly.com/shirley-lee10100/30min">reach out with any questions</a>, ideas, or details about your project. I look forward to collaborating with you and crafting a website you can be proud of! </p>
+					<p><a href="https://www.wix.com/website/templates" class="primary">
+						<input type="button" value="Explore Templates">
+					</a></p>				
+
 				</div>
 			</section>
 
