robotics/added-images-posted

--- a/project-robotics/robotics.html
+++ b/project-robotics/robotics.html
@@ -35,15 +35,71 @@
 				<!-- Thumbnail -->
 					<section id="thumbnails">
 						<article>
+							<a class="thumbnail" href="images/Robot-main.png"><img src="images/Robot-main.png" alt="" /></a>
+							<h2>Robotics Build</h2>
+							<p>FTC Robotics at Nova Labs</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/FTC_Robot_DriveBaseV3.png"><img src="images/FTC_Robot_DriveBaseV3.png" alt="" /></a>
+							<h2>Robotics Build</h2>
+							<p>FTC Robotics at Nova Labs</p>
+						</article>
+						<article>
 							<a class="thumbnail" href="images/IMG_5108.jpg" data-position="left center"><img src="images/IMG_5108.jpg" alt="" /></a>
-							<h2>Diam tempus accumsan</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+							<h2>Robotics Build</h2>
+							<p>FTC Robotics at Nova Labs</p>						
+						</article>
+						<article>
+							<a class="thumbnail" href="images/IMG_1809.jpg"><img src="images/IMG_1809.jpg" alt="" /></a>
+							<h2>Robotics Build</h2>
+							<p>FTC Robotics at Nova Labs</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/GoBilda-LinearActuator.png"><img src="images/GoBilda-LinearActuator.png" alt="" /></a>
+							<h2>Robotics Build</h2>
+							<p>FTC Robotics at Nova Labs</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/GoBilda-servoMotor.png"><img src="images/GoBilda-servoMotor.png" alt="" /></a>
+							<h2>Robotics Build</h2>
+							<p>FTC Robotics at Nova Labs</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/goBILDA-servomotor-Schematic.png"><img src="images/goBILDA-servomotor-Schematic.png" alt="" /></a>
+							<h2>Robotics Build</h2>
+							<p>FTC Robotics at Nova Labs</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/GoBilda-servoMotor-specs.png"><img src="images/GoBilda-servoMotor-specs.png" alt="" /></a>
+							<h2>Robotics Build</h2>
+							<p>FTC Robotics at Nova Labs</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/goBilda-gear.png"><img src="images/goBilda-gear.png" alt="" /></a>
+							<h2>Robotics Build</h2>
+							<p>FTC Robotics at Nova Labs</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/IMG_1798.jpg"><img src="images/IMG_1798.jpg" alt="" /></a>
-							<h2>Vivamus convallis libero</h2>
-							<p>Sed velit lacus, laoreet at venenatis convallis in lorem tincidunt.</p>
+							<h2>Robotics Build</h2>
+							<p>FTC Robotics at Nova Labs</p>
 						</article>
+						<article>
+							<a class="thumbnail" href="images/Control_Hub_Listed_Materials.png"><img src="images/Control_Hub_Listed_Materials.png" alt="" /></a>
+							<h2>Robotics Build</h2>
+							<p>FTC Robotics at Nova Labs</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/HardwareIntegration_Control_Hub.png"><img src="images/HardwareIntegration_Control_Hub.png" alt="" /></a>
+							<h2>Robotics Build</h2>
+							<p>FTC Robotics at Nova Labs</p>
+						</article>
+						<article>
+							<a class="thumbnail" href="images/Control_Hub_Wiring_Reference.png"><img src="images/Control_Hub_Wiring_Reference.png" alt="" /></a>
+							<h2>Robotics Build</h2>
+							<p>FTC Robotics at Nova Labs</p>
+						</article>
+
 						<!-- <article>
 							<a class="thumbnail" href="images/fulls/03.jpg" data-position="top center"><img src="images/thumbs/03.jpg" alt="" /></a>
 							<h2>Nec accumsan enim felis</h2>
